Timeseries insertion should not continue after a non-continuable error

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.0-rc0, 5.3.0-rc3, 5.2.2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v5.3, v5.2, v5.0
    • QE 2022-03-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      During the execution of a time-series insertion, we may get a non-continuable error from here, however, this error doesn't cause the execution to stop here, instead it proceeds with unordered writes, which causes another error and eventually triggers the invariant here.

            Assignee:
            Rui Liu (Inactive)
            Reporter:
            Rui Liu (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: