SERVER-64110 Stop retrying unordered writes after committing ordered writes hits a non-continuable error

(cherry picked from commit d53632893e0a3915a63e54fa48b55813636eea0b)